kubernetes/peerprep.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/backends: '{"k8s1-ad716a6e-default-editor-service-5003-1719d9f2":"HEALTHY","k8s1-ad716a6e-default-match-service-5004-ef4994cd":"HEALTHY","k8s1-ad716a6e-default-message-service-5002-b07b4f88":"HEALTHY","k8s1-ad716a6e-default-questions-service-5005-87d3dda2":"UNHEALTHY","k8s1-ad716a6e-default-users-service-5001-a468e077":"HEALTHY","k8s1-ad716a6e-default-web-service-80-b6064fa1":"HEALTHY"}'
    ingress.kubernetes.io/forwarding-rule: k8s2-fr-3xatbtja-default-peerprep-58he2sa5
    ingress.kubernetes.io/target-proxy: k8s2-tp-3xatbtja-default-peerprep-58he2sa5
    ingress.kubernetes.io/url-map: k8s2-um-3xatbtja-default-peerprep-58he2sa5
  creationTimestamp: "2021-11-09T21:20:01Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  managedFields:
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:backend:
          .: {}
          f:serviceName: {}
          f:servicePort: {}
        f:rules: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2021-11-09T21:20:01Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:ingress.kubernetes.io/backends: {}
          f:ingress.kubernetes.io/forwarding-rule: {}
          f:ingress.kubernetes.io/target-proxy: {}
          f:ingress.kubernetes.io/url-map: {}
        f:finalizers:
          .: {}
          v:"networking.gke.io/ingress-finalizer-V2": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: glbc
    operation: Update
    time: "2021-11-09T21:23:32Z"
  name: peerprep
  namespace: default
  resourceVersion: "43409"
  uid: fa7c52e4-d895-4a65-b42c-44f1ce390002
spec:
  backend:
    serviceName: web-service
    servicePort: 80
  rules:
  - host: peerpreplegends.com
    http:
      paths:
      - backend:
          serviceName: users-service
          servicePort: 5001
        path: /users/*
        pathType: ImplementationSpecific
      - backend:
          serviceName: questions-service
          servicePort: 5005
        path: /questions/*
        pathType: ImplementationSpecific
      - backend:
          serviceName: editor-service
          servicePort: 5003
        path: /editor/*
        pathType: ImplementationSpecific
      - backend:
          serviceName: message-service
          servicePort: 5002
        path: /message/*
        pathType: ImplementationSpecific
      - backend:
          serviceName: match-service
          servicePort: 5004
        path: /match/*
        pathType: ImplementationSpecific
      - backend:
          serviceName: web-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
