kubernetes/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: '{"network_endpoint_groups":{"5001":"k8s1-ad716a6e-default-users-service-5001-a468e077"},"zones":["asia-southeast1-a"]}'
  creationTimestamp: "2021-11-09T23:05:59Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: users
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":5001,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2021-11-09T23:05:58Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"service.kubernetes.io/load-balancer-cleanup": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: kube-controller-manager
    operation: Update
    time: "2021-11-09T23:06:33Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:cloud.google.com/neg-status: {}
    manager: glbc
    operation: Update
    time: "2021-11-09T23:20:14Z"
  name: users-service
  namespace: default
  resourceVersion: "82731"
  uid: 08b37536-34e1-4265-a77c-6257b1f8185b
spec:
  clusterIP: 10.40.9.183
  clusterIPs:
  - 10.40.9.183
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31598
    port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: users
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
